--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,12 +19,12 @@
   // Comment or uncomment lines below if you don't or do need that feature.
   "postCreateCommand": {
     // "install sagemath": "bash ./.devcontainer/installSage.sh",
-    "install pandoc": "bash ./.devcontainer/installPandoc.sh",
-    "install latex": "bash ./.devcontainer/installLatex.sh",
-    "install pretext": "bash ./.devcontainer/installPretext.sh",
+    // "install pandoc": "bash ./.devcontainer/installPandoc.sh",
+    //"install latex": "bash ./.devcontainer/installLatex.sh",
+    //"install pretext": "bash ./.devcontainer/installPretext.sh",
+    "upgrade networkx": "bash ./.devcontainer/upgradeNetworkX.sh",
     "mark repo as safe": "git config --global --add safe.directory $(pwd)"
     },
-
 
   // Port forwarding
   // ---------------
